# FranC

./: .gitignore  .ocamlformat-ignore  FranC.opam  Makefile  README.md  ast.ml  ast.mli  dune-project  lexer.mll  main.ml  makefile  parser.mly
headers/: ast.mli  parser.mli
lib/: dune
lib/Utilitaire/: string_outils.ml
lib/analyse/: ast.ml  erreurs.ml  portee.ml  types.ml
lib/coeur/: lexer.mll  parser.mly
lib/ecriture/: boucles.ml  declarations.ml  ecrire.ml  expressions.ml  fonctions.ml  prelude.ml
lib/ecriture_llvm/: llvm_blocs.ml  llvm_contexte.ml  llvm_expressions.ml  llvm_instructions.ml  llvm_programme.ml  llvm_tableaux.ml  llvm_types.ml
output/: output  output.c
src/: ast.ml  boucles.ml  dune  fonctions.ml  lexer.ml  lexer.mll  main.ml  parser.ml  parser.mly  parser.output  types.ml
src/analyse/: ast.ml  types.ml
src/ecriture/: declarations.ml
test/: capture_sortie.ml  dune  test_FranC.ml  test_boucle.ml  test_types.ml
test/test_creation_ast/: dune  test_FranC_creation_ast.ml  test_parser.ml
test/test_transformation_ast/: capture_sortie.ml  dune  test_FranC.ml  test_boucle.ml  test_expressions.ml  test_portee.ml  test_type.ml
tests/: euclide.fr  test1.fr
tests_inputs/: ackermann.fr  division.fr  euclide.fr  formater.fr  hanoi.fr  hasard.fr  lire.fr  pour_chaque.fr  procedures.fr  tableau_booleens.fr  tableau_chaines.fr  tableaux.fr  test1.fr  tri_bulles.fr  types.fr
