(lang dune 3.20)

(name FranC)

(generate_opam_files true)

(source
 (github Adamme-le-codeur-fou/FranC))

; (authors "Author Name <author@example.com>")

; (maintainers "Maintainer Name <maintainer@example.com>")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name FranC)
 (synopsis "Langage de programmation français")
 (description "")
 (depends ocaml)
;  (tags
;   ("add topics" "to describe" your project))
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
